restructured repo, error handling VoteSync

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Options Page — Reddit Web Fix</title>
-    <script src="browser-polyfill.min.js"></script>
+    <script src="../polyfill/browser-polyfill.min.js"></script>
     <script defer type="module" src="options.js"></script>
   </head>
   <body>
