--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -5,20 +5,33 @@
     <link rel="stylesheet" href="popup.css" />
     <script type="module" src="../polyfill/browser-polyfill.min.js"></script>
     <script defer type="module" src="popup.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
-      <h1>Reddit Web Fix</h1>
+      <h1 class="bungee-spice-regular">Reddit Web Fix</h1>
 
-      <h2>Background Settings</h2>
+      <h2>Customize Appearance</h2>
 
       <div class="control-group">
-        <label for="bg-type">Background Type:</label>
+        <label for="bg-type">Background:</label>
         <select id="bg-type">
-          <option selected value="none">None</option>
-          <option value="color">Solid Color</option>
-          <option value="gradient">Gradient</option>
-          <option value="image">Image</option>
+          <button>
+            <selectedcontent></selectedcontent>
+          </button>
+
+          <option selected value="none">
+            <span class="option-label">None</span>
+          </option>
+          <option value="color">
+            <span class="option-label">Solid Color</span>
+          </option>
+          <option value="gradient">
+            <span class="option-label">Gradient</span>
+          </option>
+          <option value="image"><span class="option-label">Image</span></option>
         </select>
       </div>
 
@@ -28,65 +41,74 @@
       </div>
 
       <div id="gradient-settings" class="settings-panel" style="display: none">
-        <label for="gradient-type">Gradient Type:</label>
-        <select id="gradient-type">
+        <div for="gradient-type">Gradient Type:</div>
+        <!-- <select id="gradient-type">
           <option value="linear">Linear</option>
           <option value="radial">Radial</option>
-        </select>
-        <div class="control-group flex-row">
+        </select> -->
+        <div class="flex-row flex-start mb-15">
+          <span>
+            <input
+              type="radio"
+              id="linear"
+              name="gradient-type"
+              value="linear"
+              checked
+            />
+            <label for="linear">Linear</label></span
+          >
+          <span>
+            <input
+              type="radio"
+              id="radial"
+              name="gradient-type"
+              value="radial"
+            />
+            <label for="radial">Radial</label></span
+          >
+        </div>
+
+        <!-- GRADIENT INPUT GROUP -->
+        <div class="control-group flex-row mb-15">
           <span class="input-row-item">
             <label for="gradient-color-1">Color 1:</label>
             <input type="color" id="gradient-color-1" value="#2c1111" />
           </span>
           <span class="input-row-item">
             <label for="gradient-color-2">Color 2:</label>
-            <input type="color" id="gradient-color-2" value="#231a1a" />
+            <input type="color" id="gradient-color-2" value="#212245" />
           </span>
           <div id="gradient-angle-settings" class="input-row-item">
             <label for="gradient-angle">Angle:</label>
-            <input type="number" id="gradient-angle" value="90" />
+            <input type="number" id="gradient-angle" value="90" disabled/>
           </div>
         </div>
       </div>
 
+      <!-- IMAGE INPUT GROUP -->
       <div id="image-settings" class="settings-panel" style="display: none">
-        <label for="bg-image-url">Image URL:</label>
-        <input
-          type="text"
-          id="bg-image-url"
-          placeholder="https://example.com/image.png"
-        />
-        <label for="bg-image-file">Or select a local file:</label>
-        <input type="file" id="bg-image-file" accept="image/*" />
         <div class="control-group flex-row">
           <span class="input-row-item width-100">
             <label for="bg-image-size">Size:</label>
             <select id="bg-image-size" class="width-100">
-              <option value="cover">Cover</option>
-              <option value="contain">Contain</option>
               <option selected value="auto">Auto</option>
+              <option value="contain">Contain</option>
+              <!-- <option value="cover">Cover</option> -->
             </select>
           </span>
-          <!-- <span class="input-row-item">
-            <label for="bg-image-repeat">Repeat:</label>
-            <select id="bg-image-repeat">
-              <option value="no-repeat">No Repeat</option>
-              <option value="repeat">Repeat</option>
-              <option value="repeat-x">Repeat X</option>
-              <option value="repeat-y">Repeat Y</option>
-            </select>
-          </span>
-          <span class="input-row-item">
-            <label for="bg-image-position">Position:</label>
-            <select id="bg-image-position">
-              <option value="center">Center</option>
-              <option value="top">Top</option>
-              <option value="bottom">Bottom</option>
-              <option value="left">Left</option>
-              <option value="right">Right</option>
-            </select>
-          </span> -->
         </div>
+        <span>
+          <label for="bg-image-url" class="mr-15">Image URL:</label>
+          <button type="reset" class="sm-btn">Clear</button>
+        </span>
+        <input
+          type="text"
+          id="bg-image-url"
+          placeholder="https://example.com/image.png"
+          value="https://i.etsystatic.com/8384550/r/il/753ef1/5659289347/il_794xN.5659289347_7oz4.jpg"
+        />
+        <label for="bg-image-file">Or select a local file:</label>
+        <input type="file" id="bg-image-file" accept="image/*" />
       </div>
 
       <button type="submit" id="save-settings">Save and Apply</button>
