Enhance VoteSync.js: Introduce lightweight tracking for seen posts not yet voted on, improving vote state syncing across pages. Update popup styles for better layout and readability, including adjustments to font sizes and element spacing.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -17,14 +17,15 @@
   <body>
     <!-- CONTAINER -->
     <div class="container">
+        <!-- TITLE -->
       <h1 class="bungee-spice-regular">Reddit Web Fix</h1>
 
-      <!-- TITLE -->
-      <h2 class="fw-100">Customize Appearance</h2>
+      <!-- SUBTITLE -->
+      <h3 class="fw-100">Customize Appearance</h3>
 
       <!-- BACKGROUND TYPE SELECTOR -->
       <div class="control-group">
-        <label for="bg-type" class="fw-200">Background:</label>
+        <label for="bg-type" class="fw-200 panel-control">Background:</label>
         <select id="bg-type">
           <button>
             <selectedcontent></selectedcontent>
@@ -52,7 +53,7 @@
 
       <!-- SOLID COLOR INPUT GROUP -->
       <div id="color-settings" class="settings-panel" style="display: none">
-        <label for="bg-color" class="fw-300"
+        <label for="bg-color" class="fw-300 mb-15"
           >Background Color:</label
         >
         <input type="color" id="bg-color" value="#2c1111" />
