--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -32,15 +32,19 @@
           </button>
 
           <option selected value="none">
+            <span class="icon">❌</span>
             <span class="option-label fw-300">None</span>
           </option>
           <option value="color">
+            <span class="icon">🟦</span>
             <span class="option-label fw-300">Solid Color</span>
           </option>
           <option value="gradient">
+            <span class="icon">🔥</span>
             <span class="option-label fw-300">Gradient</span>
           </option>
           <option value="image">
+            <span class="icon">🖼️</span>
             <span class="option-label fw-300">Image</span>
           </option>
         </select>
@@ -115,7 +119,7 @@
         <span>
           <label
             for="bg-image-url"
-            class="input-row-item mr-10 fw-300"
+            class="input-row-item mr-10 fw-400"
             >Image URL:</label
           >
           <button type="reset" class="fw-300">Clear</button>
@@ -131,7 +135,7 @@
         <div class="flex-row flex-start">
           <label
             for="bg-image-file"
-            class="input-row-item mr-10 fw-300"
+            class="input-row-item mr-10 fw-400"
             >Or select a local file:</label
           >
           <span id="image-file-name" class="fw-300"></span>
@@ -142,7 +146,7 @@
         <div class="control-group flex-row">
           <!-- Image size -->
           <span class="input-row-item width-100">
-            <label for="bg-image-size" class="fw-300"
+            <label for="bg-image-size" class="fw-400"
               >Size:</label
             >
             <select id="bg-image-size">
@@ -160,13 +164,13 @@
         </div>
         <!-- Image dimmer -->
         <div class="">
-          <label id="bg-dimmer-label" for="bg-dimmer" class="fw-300 input-row-item">Dimmer:</label>
+          <label id="bg-dimmer-label" for="bg-dimmer" class="fw-400 input-row-item">Dimmer:</label>
           <input type="range" id="bg-dimmer" min="0" max="100" value="34" class="ml-15" />
         </div>
       </div>
 
-      <button type="submit" id="save-settings" class="fw-200">
-        Save and Apply
+      <button type="submit" id="save-settings" class="fw-200 bungee-spice-regular">
+       <span id="save-icon">💾</span> Save and Apply <span id="apply-icon">🔧</span>
       </button>
     </div>
   </body>
