Refactor Appearance class and popup functionality: Update background settings management to utilize common properties, enhance image handling logic, and improve event handling for dimmer value updates. Revise popup styles for better layout and user experience, including adjustments to input elements and dynamic display of image file names.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -60,7 +60,8 @@
         <label for="bg-color" class="fw-300 mb-15"
           >Background Color:</label
         >
-        <input type="color" id="bg-color" value="#2c1111" />
+        <div class="flex-row">
+        <input type="color" id="bg-color" value="#2c1111" /></div>
       </div>
 
       <!-- GRADIENT INPUT GROUP 1 -->
@@ -165,7 +166,8 @@
         <!-- Image dimmer -->
         <div class="">
           <label id="bg-dimmer-label" for="bg-dimmer" class="fw-400 input-row-item">Dimmer:</label>
-          <input type="range" id="bg-dimmer" min="0" max="100" value="34" class="ml-15" />
+          <input type="range" id="bg-dimmer" min="0" max="100" value="34" />
+          <div id="bg-dimmer-value" class="fw-200">34</div>
         </div>
       </div>
 
