Refactor Appearance class and add dual transition properties to grid-container.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -131,7 +131,11 @@
       </div>
 
       <!-- IMAGE INPUT GROUP -->
-      <div id="image-settings" class="settings-panel pos-relative" style="display: none">
+      <div
+        id="image-settings"
+        class="settings-panel pos-relative"
+        style="display: none"
+      >
         <!-- Image from URL -->
         <span>
           <label for="bg-image-url" class="fs-08rem mr-10 fw-400"
@@ -207,6 +211,29 @@
           <input type="range" id="bg-dimmer" min="0" max="100" value="34" />
           <div class="bg-dimmer-value fw-200" id="bg-dimmer-value">34</div>
         </div>
+
+        <!-- <div class="control-group flex-row justify-between mt-10">
+          <span class="fs-08rem">
+            <label for="bg-image-position" class="fw-400">Position:</label>
+            <select id="bg-image-position">
+              <option value="center center" selected>
+                <span class="option-label fw-300">Center</span>
+              </option>
+              <option value="top center">
+                <span class="option-label fw-300">Top</span>
+              </option>
+              <option value="bottom center">
+                <span class="option-label fw-300">Bottom</span>
+              </option>
+              <option value="center left">
+                <span class="option-label fw-300">Left</span>
+              </option>
+              <option value="center right">
+                <span class="option-label fw-300">Right</span>
+              </option>
+            </select>
+          </span>
+        </div> -->
       </div>
 
       <button
